--- a/extension/css/style.css
+++ b/extension/css/style.css
@@ -1,13 +1,76 @@
-body {
-  min-width: 357px;
-  overflow-x: hidden;
+*{
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  margin: 0;
+  padding: 0;
 }
 
-img {
-  margin: 5px;
-  border: 2px solid black;
-  vertical-align: middle;
-  width: 75px;
-  height: 75px;
+body{
+  width: 300px;
+  margin: 0;
+  padding: 0;
+  background: #ffffff;
+  overflow: hidden;
+  color: #434a54;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
 }
-
+.clear{
+  clear: both;
+}
+h3{
+  font-family: 'Roboto', sans-serif;
+  padding: 15px 10px;
+  font-size: 20px;
+}
+.translate-block{
+  padding: 15px 10px;
+  border-top: 1px solid #ebeff2;
+  border-bottom: 1px solid #ebeff2;
+}
+input{
+  width: 100%;
+  height: 40px;
+  border-radius: 5px;
+  -webkit-box-sizing: border-box;‌​
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: 1px solid #e6eaed;
+  font-size: 16px;
+  font-weight: 300;
+  padding: 0px 5px;
+}
+.translated-phrase{
+  margin: 15px 10px;
+}
+.translated-phrase span{
+  font-weight: 500;
+  font-size: 16px;
+}
+.sound{
+  width: 20px;
+  height: 20px;
+  border: none;
+  background: url("../img/play.png") no-repeat;
+  background-size: 20px 20px;
+  position: relative;
+  top: 4px;
+  cursor: pointer;
+}
+.sound:focus {
+  outline: none;
+}
+.language{
+  color: white;
+  background: #434a54;
+  padding: 15px 10px;
+}
+.meanings{
+  padding-left: 20px;
+  list-style-type: disc;
+  margin: 5px 10px;
+}
+.meanings li{
+  font-size: 14px;
+  padding: 2px 0px;
+}
