--- a/extension/css/style.css
+++ b/extension/css/style.css
@@ -8,7 +8,7 @@
 body {
   width: 300px;
   margin: 0;
-  padding: 0;
+  padding: 0 0 15px 0;
   background: #ffffff;
   overflow: hidden;
   color: #434a54;
@@ -32,14 +32,12 @@ h3 {
   font-weight: 400;
 }
 
-.typeahead {
-  padding: 15px 10px;
-  border-top: 1px solid #ebeff2;
-  border-bottom: 1px solid #ebeff2;
+.phrase-input-block {
+  padding: 15px 10px 0px 10px;
   position: relative;
 }
 
-.typeahead .input-group {
+.phrase-input-block .input-group {
   width: 100%;
   display: table;
   position: relative;
@@ -47,7 +45,7 @@ h3 {
   font-size: 16px;
 }
 
-.typeahead .input-group input {
+.phrase-input-block .input-group input {
   width: 100%;
   height: 40px;
   border-top-left-radius: 5px;
@@ -64,16 +62,16 @@ h3 {
   transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
 
-.typeahead .input-group input:focus {
+.phrase-input-block .input-group input:focus {
   outline: none;
   border: 2px solid #111925;;
 }
 
-.typeahead .input-group span {
+.phrase-input-block .input-group span {
   display: table-cell;
 }
 
-.typeahead .input-group span button {
+.phrase-input-block .input-group span button {
   position: relative;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
@@ -89,34 +87,33 @@ h3 {
   text-transform: uppercase;
 }
 
-.typeahead .input-group span button:hover {
+.phrase-input-block .input-group span button:hover {
   background: #2e6a78;
 }
 
-.typeahead ul {
+.suggestions {
   width: 280px;
-  position: absolute;
-  background: white;
   border: 1px solid #ebeff2;
   border-bottom-right-radius: 5px;
   border-bottom-left-radius: 5px;
   border-top: none;
-  margin-top: -6px;
+  margin: 0px 0px 0px 10px;
   box-sizing: border-box;
   z-index: 2;
+  list-style-type: none;
 }
 
-.typeahead ul li {
+.suggestions li {
   padding: 9px 5px;
   border-top: 1px solid #ebeff2;
 }
 
-.typeahead ul li:hover {
+.suggestions li:hover {
   cursor: pointer;
   background-color: #ebeff2;
 }
 
-.typeahead ul li:first-child {
+.suggestions li:first-child {
   border: none;
   padding-top: 15px;
 }
