--- a/extension/css/style.css
+++ b/extension/css/style.css
@@ -48,8 +48,6 @@ h3 {
 .phrase-input-block .input-group input {
   width: 100%;
   height: 40px;
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -73,8 +71,6 @@ h3 {
 
 .phrase-input-block .input-group span button {
   position: relative;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
   background-color: #203c43;
   border: 1px solid transparent;
   color: #e5e5e5;
@@ -94,10 +90,8 @@ h3 {
 .suggestions {
   width: 280px;
   border: 1px solid #ebeff2;
-  border-bottom-right-radius: 5px;
-  border-bottom-left-radius: 5px;
   border-top: none;
-  margin: 0px 0px 0px 10px;
+  margin-left: 10px;
   box-sizing: border-box;
   z-index: 2;
   list-style-type: none;
@@ -135,12 +129,11 @@ h3 {
 .sound {
   width: 20px;
   height: 20px;
-  font-family: 'fontello';
   border: none;
-  background-size: 20px 20px;
   position: relative;
   cursor: pointer;
   margin-right: 10px;
+  background: none;
 }
 
 .sound:focus {
@@ -149,17 +142,36 @@ h3 {
 
 .meta-translation-header {
   color: white;
-  background: #203c43;
-  padding: 8px 10px;
+  padding: 0px 10px 8px 0px;
+  border-top: 5px solid #203c43;
 }
 
 .meta-translation-header span {
   text-transform: uppercase;
 }
 
+.language-block {
+  font-weight: 400;
+  background: #203c43;
+  padding: 0px 20px 4px 20px;
+  min-width: 45px;
+  display: inline-block;
+  text-align: center;
+  position: relative;
+  top: -2px;
+}
+
+.language-block .icon-share {
+  color: white;
+  margin-left: 10px;
+  text-decoration: none;
+}
+
+.links-block .icon-export a{
+  color: #434a54;
+}
+
 .translations {
-  padding-left: 20px;
-  list-style-type: disc;
   margin: 5px 10px;
 }
 
