--- a/extension/css/fontello.css
+++ b/extension/css/fontello.css
@@ -1,6 +1,7 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../fonts/fontello.svg?75212242#fontello') format('svg');
+  src: url('../fonts/fontello.svg?75212242#fontello') format('svg'),
+       url('../fonts/fontello.woff?75212242') format('woff');
   font-weight: normal;
   font-style: normal;
 }
